<resources>
    <string name="app_name">WebSocket</string>
    <string name="use_store_bitcoin">Use and store you\nBitcoins more\nsecurely</string>
    <string name="bitoasis_feature">Multisig wallet secures\nyour bitcoins with 3 multisig\ndistributed key storage.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPasswd">Forgot your password?</string>
    <string name="tnc"><u>Terms of service</u> and <u>Privacy policy</u></string>
    <string name="firstName">Your Name</string>
    <string name="lastName">Your Surname</string>
    <string name="yourEmail">Your email</string>
    <string name="choosePassed">Choose a Password</string>
    <string name="inputNumber">Enter Number</string>
    <string name="getDetails">Get Details</string>
    <string name="plzEnterInput">Please enter a number</string>
    <string name="plzConnectToNetwork">Please check your internet connection.</string>
    <string name="tradeHighlight">Trade Highlight</string>
    <string name="tradeSummary">Trade Summary</string>
    <string name="currency">Currency</string>
    <string name="lastTradePrice">Last Trade Price</string>
    <string name="lowestAsk">LowestAsk</string>
    <string name="highestBid">Highest Bid</string>
    <string name="frozen">Frozen</string>
    <string name="invalidChannel">Invalid Channel</string>
    <string name="dataSync">Syncing data please wait...</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterValidEmail">Enter valid email</string>
    <string name="enterPasswd">Enter Password</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="userNotExist">Email/Password is incorrect.</string>
    <string name="userExist">Email is already registered. Please user another email.</string>
</resources>
