<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.dashboard.TradeSummaryFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:stretchColumns="*">

        <!--Table Header-->
        <TableRow
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tableHeader">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/currency"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/lastTradePrice"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/lowestAsk"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </TableRow>

        <include
            android:id="@+id/cr1"
            layout="@layout/table_row"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            android:id="@+id/cr2"
            layout="@layout/table_row"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            android:id="@+id/cr3"
            layout="@layout/table_row"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            android:id="@+id/cr4"
            layout="@layout/table_row"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            android:id="@+id/cr5"
            layout="@layout/table_row"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            android:id="@+id/cr6"
            layout="@layout/table_row"
            android:visibility="gone"
            tools:visibility="visible" />

    </TableLayout>


</FrameLayout>