<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/tradeIndicatorr"
                android:layout_width="18dp"
                android:layout_height="18dp"
                tools:src="@drawable/ic_up"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/currencyTV"/>

            <TextView
                android:id="@+id/currencyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="BTC"
                android:text="-"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"  />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastTradePrice"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lastTradePriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="2.32432"
                android:text="-"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"  />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowestAsk"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lowestAskTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="2.32432"
                android:text="-"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"  />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highestBid"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/highestBidTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="2.32432"
                android:text="-"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"  />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frozen"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/frozenTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="Yes"
                android:text="-"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"  />
        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>